# ETP

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 02dff9694c55_ajout_du_champ_siret_aux_entreprises.py  271aa639371c_initial_enterprise_foundation_schema.py  443875a74cfc_ajout_des_index_spatiaux_aux_jobs_et_.py  8b589d30a079_auto_gis_migration.py  8db1189521fa_ajouter_le_champ_cv_key_au_profil.py  audit_jsonb_gin_index.py  cf560bc401dd_merge_heads.py  e9ea1c94e7aa_add_soft_delete_and_audit_fields_to_.py
frontend/: .prettierrc  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(auth)/reset-password/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/analytics/: page.tsx
frontend/src/app/(dashboard)/applications/: page.tsx
frontend/src/app/(dashboard)/candidates/: page.tsx
frontend/src/app/(onboarding)/: layout.tsx
frontend/src/app/auth-callback/: page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/shared/: filter-bar.tsx  job-card.tsx  match-score-ring.tsx  pipeline-progress.tsx  skill-bar.tsx  status-badge.tsx  tech-badge.tsx
frontend/src/components/ui/: form.tsx  progress-bar.tsx  toggle-switch.tsx
frontend/src/lib/: api.ts  index.ts
frontend/src/lib/validations/: auth.ts
frontend/src/services/: applications.service.ts  jobs.service.ts  users.service.ts
frontend/src/types/: domain.ts  index.ts
scripts/: backup_db.sh  dev.sh
src/: database.py  main.py
src/core/: celery_app.py  config.py  database.py  logging_config.py  rate_limit.py  repository.py  security.py  storage.py
src/database/: base.py
src/models/: __init__.py  application.py  candidat.py  job.py  mixins.py
src/modules/analytics/: __init__.py  repository.py  router.py  schemas.py  tests.py
src/modules/applications/: models.py  repository.py  resume_analyzer.py  router.py  schemas.py  services.py  tasks.py  tests.py
src/modules/auth/: dependencies.py  oauth.py  router.py  schemas.py  services.py  test_auth.py
src/modules/companies/: models.py  repository.py  router.py  schemas.py  services.py
src/modules/gdpr/: __init__.py  repository.py  router.py  schemas.py
src/modules/jobs/: models.py  repository.py  router.py  schemas.py  services.py
src/modules/notifications/: __init__.py  router.py  schemas.py  services.py
src/modules/search/: __init__.py  repository.py  router.py  schemas.py
src/modules/users/: models.py  repository.py  router.py  schemas.py  services.py  tasks.py
tests/: test_integration.py
(+12 files in other folders)
