[tool.poetry]
package-mode = false
name = "etp_platform"
version = "0.1.0"
description = ""
authors = ["JOJO <hounkpatijosue2020@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.49" }
asyncpg = "^0.31.0"
geoalchemy2 = "^0.19.0"
alembic = "^1.18.4"
python-dotenv = "^1.2.2"
pydantic = { extras = ["email"], version = "^2.13.3" }
psycopg2-binary = "^2.9.12"
pydantic-settings = "^2.2.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
aioboto3 = "^15.5.0"



[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"